# sisl-cplusplus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.xml
.cache/clangd/index/: main.cpp.9B20FD07847A17FC.idx  merge.cpp.92159DCFF7E63DF9.idx  merge.hpp.CF610ECBC89F4667.idx  sisl_codec.cpp.5048658449A4C2D2.idx  sisl_codec.hpp.434CC4003126E6C6.idx  sisl_lexer.cpp.EF66940886AFC36F.idx  sisl_lexer.hpp.EEEAF53063CD6390.idx  sisl_parser.cpp.21D5AC579EEE306E.idx  sisl_parser.hpp.19237F7DE2DC7147.idx  split.cpp.543714343B2F674C.idx  split.hpp.0E8A727C1E030A59.idx  unicode_escape.cpp.EF89630530ED0010.idx  unicode_escape.hpp.319ECC5F879BD11C.idx
src/: main.cpp  merge.cpp  merge.hpp  sisl_codec.cpp  sisl_codec.hpp  sisl_lexer.cpp  sisl_lexer.hpp  sisl_parser.cpp  sisl_parser.hpp  split.cpp  split.hpp  unicode_escape.cpp  unicode_escape.hpp  xml_codec.cpp  xml_codec.hpp
tests/: conftest.py  run_tests.py  test_00_basic_interop.py  test_01_primitives.py  test_02_arrays.py  test_03_objects.py  test_04_splitting.py  test_05_joining.py  test_06_complex_structures.py  test_07_escape_sequences.py  test_08_roundtrip.py  test_09_exact_format.py  test_10_xml.py  test_11_file_io.py  test_12_generic_xml.py
